--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav class="navigation" id="nav">
         <ul class="nav-list">
             <li id="navwelcome"><a href="index.php" class="menu-link"><img src="home.svg"><span class="menu-hover short-len--mod">Welcome</span></a></li>
-            <li id="navschools"><a href="schools.php" class="menu-link"><img src="images/school.svg"><span class="menu-hover">Problem One</span></a></li>
-            <li id="navmath"><a href="math.php" class="menu-link"><img src="images/function.svg"><span class="menu-hover">Problem Two</span></a></li>
+            <li id="navproblemone"><a href="problemone.php" class="menu-link"><img src="one.svg"><span class="menu-hover">Problem One</span></a></li>
+            <li id="navproblemtwo"><a href="problemtwo.php" class="menu-link"><img src="two.svg"><span class="menu-hover">Problem Two</span></a></li>
         </ul>
         <a href="javascript:void(0);" class="icon navbar">
             <div class="burger">
